# TLD

./: README.md
archivos/: ranking.json
trabajo_practico/: Cargo.toml
trabajo_practico/acciones/: Cargo.toml  cargo.toml
trabajo_practico/acciones/src/: accion.rs  ataque.rs  lib.rs  movimiento.rs
trabajo_practico/barcos/: cargo.toml
trabajo_practico/barcos/src/: barco.rs  estado_barco.rs  flota.rs  lib.rs
trabajo_practico/cliente/: Cargo.toml
trabajo_practico/cliente/src/: cliente.rs
trabajo_practico/juego/: Cargo.toml  cargo.toml
trabajo_practico/juego/src/: cliente.rs  deserializador.rs  instruccion.rs  juego.rs  jugador.rs  lib.rs  main.rs  main_jugador.rs  mapa.rs  mensaje.rs  serializador.rs  server.rs
trabajo_practico/libreria/: cargo.toml
trabajo_practico/libreria/src/: constantes.rs  custom_error.rs  lib.rs
trabajo_practico/servidor/: Cargo.toml
trabajo_practico/servidor/src/: lib.rs  servidor.rs
trabajo_practico/src/: accion.rs  acciones.rs  ataque.rs  barco.rs  constantes.rs  estado_barco.rs  flota.rs  juego.rs  jugador.rs  lib.rs  main.rs  mapa.rs  movimiento.rs
