[package]
name = "servidor"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
rand = "0.8"
barcos = { path=  "../barcos"}
libreria = { path=  "../libreria"}
acciones = { path=  "../acciones"}
juego = { path=  "../juego"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "servidor"
path = "src/servidor.rs"